# mini-llm-prophet

./: .gitignore  .pre-commit-config.yaml  CHANGLOG.md  CONTRIBUTOR.md  README.md  pyproject.toml
.github/workflows/: ci.yml  live-api-command.yml  live-api-gate.yml
docs/: architecture.md  batch.md  cli.md  datasets.md  eval.md  extension.md  output.md
examples/: example_batch_job.jsonl
src/miniprophet/: __init__.py  __main__.py  exceptions.py
src/miniprophet/agent/: batch_agent.py  cli_agent.py  context.py  default.py  trajectory.py
src/miniprophet/cli/: __init__.py  utils.py
src/miniprophet/cli/components/: __init__.py  banner.py  env_editor.py  evaluation.py  forecast_results.py  forecast_setup.py  observation.py  run_header.py  search_results.py  source_board.py  step_display.py
src/miniprophet/config/: __init__.py  default.yaml
src/miniprophet/environment/: forecast_env.py  source_board.py
src/miniprophet/eval/: __init__.py  agent_factory.py  agent_runtime.py  cli.py  datasets_cli.py  progress.py  runner.py  types.py
src/miniprophet/eval/datasets/: __init__.py  cache.py  hf_loader.py  loader.py  registry.py  schema.py  validate.py
src/miniprophet/models/: __init__.py  litellm.py  litellm_response.py  openrouter.py  responses_utils.py  retry.py  utils.py
src/miniprophet/run/: app.py  batch.py  batch_progress.py  batch_runner.py  cli.py  cli_config.py  set.py  tui.py
src/miniprophet/run/services/: __init__.py  kalshi.py  polymarket.py
src/miniprophet/search/: __init__.py  brave.py  exa.py  perplexity.py
src/miniprophet/tools/: __init__.py  search_tool.py  source_board_tools.py  submit.py
src/miniprophet/utils/: display.py  log.py  metrics.py  serialize.py
tests/: conftest.py  test_agent.py  test_batch.py  test_config.py  test_environment.py  test_eval_datasets.py  test_live_apis.py  test_models.py  test_run.py  test_search.py  test_services.py  test_tools.py  test_utils.py
