[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-llm-prophet"
version = "0.1.3"
description = "A minimal LLM forecasting agent scaffolding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "trafilatura",
    "pydantic>=2.0",
    "typer[all]",
    "rich",
    "tenacity",
    "pyyaml",
    "platformdirs",
    "litellm",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[project.scripts]
prophet = "miniprophet.run.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
